[package]
name = "tam"
version = "0.0.1"
authors = ["Sergey Potapov <blake131313@gmail.com>", "SuperHedge <superhedge@proton.me>"]
edition = "2021"
description = "Technical analysis library. Implements number of indicators: EMA, SMA, RSI, MACD, Stochastic, etc."
keywords = ["technical-analysis", "financial", "ema", "indicators", "trading"]
license = "MIT"
documentation = "https://docs.rs/ta"
readme = "README.md"
categories = ["science", "algorithms"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[badges]
travis-ci = { repository = "greyblake/ta-rs", branch = "master" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_approx_eq = "1.0.0"
csv = "1.3.1"
bencher = "0.1.5"
rand = "0.9.0"
bincode = { version = "2.0.1", features = ["serde"] }
serde_json = "1.0.100"

[profile.release]
lto = true

[[bench]]
name = "indicators"
path = "benches/indicators.rs"
harness = false

[[example]]
name = "ema_serde"
path = "examples/ema_serde.rs"
required-features = ["serde"]
